# rustymandel

./: Cargo.toml  mandel.c  readme.md
src/: main.rs
